# CHATBOT

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: config.py  main.py  models.py
backend/middleware/: __init__.py  logging_middleware.py
backend/services/: document_processor.py  llm_service.py  vector_store.py
frontend/: app.py
